--- a/Css/Styles.css
+++ b/Css/Styles.css
@@ -1,6 +1,6 @@
 body {
     height: 100vh;
-    background-image: url('../Resources/Img/BackgroundsNormal.png');
+    background-image: url('../Resources/Img/Backgrounds.png');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
@@ -11,12 +11,7 @@ h1 {
     font-family: "Work Sans", sans-serif;
 }
 
-.list-group-item {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
+/* Estilos de la página de login*/
 .container {
     display: flex;
     justify-content: center;
@@ -24,22 +19,50 @@ h1 {
     height: 100vh;
 }
 
+.list-group-item {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
 .card {
     width: 400px;
-    border-radius: 10%;
     text-align: center;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
-#loginInput, #selectRol{
-    font-family: "Work Sans", sans-serif;
+#containerLogin{
+    border-radius: 20px;
+}
+
+#emailInput, #passwordInput, #selectRol{
     margin: 1vh 0;
+    border-radius: 20px;
+    font-family: "Work Sans", sans-serif;
 }
 
 #btnLogin {
+    width: 80%;
     font-family: "Work Sans", sans-serif;
     font-size: 1.5rem;
-    width: 60vh;
     background-color: #00304D;
     border-color: #ff583300;
+    border-radius: 20px;
+}
+
+.list-group-item {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+/* Estilos del modal de login */
+
+#btnCloseModal {
+    width: 80%;
+    font-family: "Work Sans", sans-serif;
+    font-size: 1.5rem;
+    background-color: #00304D;
+    border-color: #ff583300;
+    border-radius: 20px;
 }
