--- a/Css/Styles.css
+++ b/Css/Styles.css
@@ -81,17 +81,6 @@ body {
     border-radius: 20px;
 }
 
-/* Estilos del encabezado */
-#heading {
-    height: 10vh;
-    top: 0;
-    display: flex;
-    align-items: center;
-    font-family: "Work Sans", sans-serif;
-    font-size: 12px;
-    background-color: #4d0000;
-}
-
 /* Estilos de subencabezado */
 .line {
     height: 2px;
@@ -178,13 +167,58 @@ svg {
     margin: 2%;
     padding: 20px;
     display: flex;
-    overflow-y: auto;
     border-radius: 20px;
     justify-content: center;
 }
 
-/* Estilos del menú de navegación */
+/* Estilos de subencabezado */
+.linea-horizontal {
+    border: none;
+    height: 2px;
+    background-color: #00304D;
+    width: 100%;
+    margin: 0 auto 20px;
+    justify-content: center;
+}
 
+/* Estilos de contenido de pantalla */
+#dynamicContentContainer {
+    width: 100%;
+    height: 100%;
+    padding: 10px;
+    display: flex;
+    flex-wrap: wrap;
+    overflow-y: auto;
+    border-radius: 20px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    background-color: #ffffff;
+    border: 1px solid #c7c7c7;
+}
+
+/* Estilos para la barra de desplazamiento */
+#dynamicContentContainer::-webkit-scrollbar {
+    height: 10px;
+    width: 5px;
+    border-radius: 10px;
+}
+
+#dynamicContentContainer::-webkit-scrollbar-track {
+    background: #f1f1f100;
+    border-radius: 10px;
+}
+
+#dynamicContentContainer::-webkit-scrollbar-thumb {
+    background: #00304D;
+    border-radius: 10px;
+}
+
+#dynamicContentContainer::-webkit-scrollbar-thumb:hover {
+    background: #39A900;
+}
+
+/* Estilos del menú de navegación */
 #optionMenu {
     margin: 1%;
     width: 40vh;
@@ -207,47 +241,24 @@ svg {
     margin-top: 30vh;
 }
 
-/* Estilos de subencabezado */
-#subHeading {
-    font-family: "Work Sans", sans-serif;
-    font-size: 20px;
-    text-align: start;
-    margin-bottom: 0%;
-}
-
-.linea-horizontal {
-    border: none;
-    height: 2px;
-    background-color: #00304D;
+/* Estilos de la card interactiva */
+#contentCard{
     width: 100%;
-    margin: 0 auto 20px;
-    justify-content: center;
-}
-
-/* Estilos de la ficha interactiva */
-#contentCard {
-    width: 90%;
-    text-align: center;
-    border-radius: 20px;
+    border-radius: 50px;
+    border: 1px solid #c7c7c7;  
+    padding: 10px;
+    margin-top: 1vh;
 }
 
 #imgcon {
-    width: 70%;
-    display: block;
-    margin: 0 auto;
-    margin-top: 5%;
+    width: 200%;
+    margin-left: 30%;
 }
 
-/* Estilos del pie de pagina */
-#footer {
-    margin-top: 2vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: #c7c7c7;
-    font-family: "Work Sans", sans-serif;
-    font-size: 15px;
+#moreOptionBtn{
+    width: 20%;
 }
+
 
 /* Estilos del modal de notificaciones */
 #messageInput {
