--- a/Css/Styles.css
+++ b/Css/Styles.css
@@ -192,7 +192,7 @@ svg {
     border-radius: 20px;
     flex-direction: column;
     justify-content: center;
-    align-items: flex-start;
+    align-items: center;
     background-color: #ffffff;
     border: 1px solid #c7c7c7;
 }
@@ -243,22 +243,20 @@ svg {
 
 /* Estilos de la card interactiva */
 #contentCard{
-    width: 100%;
+    width: 150vh;
     border-radius: 50px;
     border: 1px solid #c7c7c7;  
     padding: 10px;
     margin-top: 1vh;
 }
 
-#imgcon {
-    width: 200%;
-    margin-left: 30%;
+#iconImg {
+    margin-left: 1vh;
 }
 
 #moreOptionBtn{
     width: 20%;
 }
-
 
 /* Estilos del modal de notificaciones */
 #messageInput {
