--- a/Css/Styles.css
+++ b/Css/Styles.css
@@ -93,8 +93,7 @@ body {
 }
 
 #btnUploadFile {
-    width: 25vh;
-    margin: 5vh;
+    width: 30vh;
     font-family: "Work Sans", sans-serif;
     font-size: 20px;
     background-color: #00304D;
@@ -203,11 +202,10 @@ svg {
     height: 100%;
     padding: 5px;
     display: flex;
-    flex-wrap: wrap;
+    flex-direction: column; /* Asegura que los elementos se apilen verticalmente */
     overflow-y: auto;
     border-radius: 20px;
-    flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
     background-color: #ffffff;
     border: 1px solid #c7c7c7;
@@ -237,7 +235,7 @@ svg {
 }
 
 #btnNavegationMenu {
-    margin-top: 30vh;
+    margin-top: 25vh;
 }
 
 /* Estilos de la card interactiva */
