Se arreglan partes del codigo del archivo vista, y controlador, donde se permite mostar el boton de generar reporte, tambien empezando a la modificación del html para el cambio de los botones del menu de opciones

--- a/Css/Styles.css
+++ b/Css/Styles.css
@@ -81,7 +81,10 @@ body {
 #btnFollowUpPlan,
 #moreOptionBtn,
 #btnCheckUserManual,
-#btnReport {
+#btnReport,
+#btnMakeAssistance,
+#btnCheckHistory,
+#btnMakeReport {
     width: 90%;
     color: #ffffff;
     margin: 0.5vh;
@@ -115,8 +118,15 @@ body {
 #btnFiltrerCourse:hover,
 #btnReport:hover,
 #btnUploadFile:hover,
-#btnDownload:hover {
+#btnDownload:hover,
+#btnMakeAssistance:hover,
+#btnCheckHistory:hover,
+#btnMakeReport:hover {
     background-color: #39A900;
+}
+
+#btnReport {
+    display: none; 
 }
 
 /* Estilos de la pantalla de principal */
