Se intento arreglar la navegación pero sucedio error que ya no deja ver el area de trabajo

--- a/Css/Styles.css
+++ b/Css/Styles.css
@@ -249,7 +249,7 @@ svg {
 }
 
 /* Estilos de la card interactiva */
-#contentCard, #contentCardCourse {
+#contentCard, #contentCardCourse, #contentCardNotificatión, #contentCardStudent, #contentCardManual{
     width: 150vh;
     border-radius: 50px;
     border: 1px solid #c7c7c7;
